--- a/front-end/cmd/web/templates/test.page.html
+++ b/front-end/cmd/web/templates/test.page.html
@@ -8,8 +8,12 @@
             <hr>
             <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
             <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
-            <a id="authFalseBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth with incorrect credentials</a>
+            <a id="authFalseBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth with incorrect
+                credentials</a>
             <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Log an event</a>
+            <a id="refreshLogsBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Refresh logs</a>
+
+
 
             <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                 <span class="text-muted">Output shows here...</span>
@@ -17,16 +21,22 @@
         </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col-md-4">
             <h4 class="mt-5">Sent</h4>
             <div class="mt-1" style="outline: 1px solid silver; padding: 2em;">
                 <pre id="payload"><span class="text-muted">Nothing sent yet...</span></pre>
             </div>
         </div>
-        <div class="col">
+        <div class="col-md-4">
             <h4 class="mt-5">Received</h4>
             <div class="mt-1" style="outline: 1px solid silver; padding: 2em;">
                 <pre id="received"><span class="text-muted">Nothing received yet...</span></pre>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <h4 class="mt-5">Logs</h4>
+            <div class="mt-1" style="outline: 1px solid silver; padding: 2em;">
+                <pre id="logs"><span class="text-muted">Nothing received yet...</span></pre>
             </div>
         </div>
     </div>
@@ -41,6 +51,8 @@
     let output = document.getElementById("output");
     let sent = document.getElementById("payload");
     let recevied = document.getElementById("received");
+    let logs = document.getElementById("logs");
+    let refreshLogsBtn = document.getElementById("refreshLogsBtn");
 
     brokerBtn.addEventListener("click", function () {
         console.log("brokerBtn click func");
@@ -115,8 +127,8 @@
                 received.innerHTML = "";
             })
     })
-    
-    
+
+
     // Auth btn false
     authFalseBtn.addEventListener("click", function () {
         console.log("authBrokerBtn click func");
@@ -161,9 +173,9 @@
                 received.innerHTML = "";
             })
     })
-    
+
     // Log event btn
-     logBtn.addEventListener("click", function () {
+    logBtn.addEventListener("click", function () {
         console.log("logBtn click func");
         event.stopImmediatePropagation()
 
@@ -194,6 +206,47 @@
             .then((data) => {
                 sent.innerHTML = JSON.stringify(payload, undefined, 4);
                 received.innerHTML = JSON.stringify(data, undefined, 4);
+                if (data.error) {
+                    output.innerHTML += `<br><strong>Error</strong>: ${data.message}`;
+                    console.log(data.message);
+                } else {
+                    output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
+                }
+            })
+            .catch((error) => {
+                output.innerHTML += "<br><br>Error: " + error;
+                received.innerHTML = "";
+            })
+    })
+
+
+    // Refresh logs
+    refreshLogsBtn.addEventListener("click", function () {
+        console.log("refreshLogsBtn click func");
+        event.stopImmediatePropagation()
+
+        const payload = {
+            action: 'refreshLogs',
+            log: {}
+        }
+
+        const headers = new Headers();
+        headers.append("Content-Type", "application/json");
+
+        const body = {
+            method: 'POST',
+            body: JSON.stringify(payload),
+            headers: headers
+        }
+
+
+        logs.innerHTML = "";
+
+        // Calling Log Service (via Broker Service)
+        fetch("http:\/\/localhost:8080/handle", body)
+            .then((response) => response.json())
+            .then((data) => {
+                logs.innerHTML = JSON.stringify(data, undefined, 4);
                 if (data.error) {
                     output.innerHTML += `<br><strong>Error</strong>: ${data.message}`;
                     console.log(data.message);
